// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscoveryStatus page Renders correctly when claiming devices 1`] = `
<span
  className="has-text-weight-bold mb-20"
>
  <div
    className="inline-buttons"
  >
    <button
      className="button is-primary is-outlined is-uppercase is-paddingless mb-10"
      disabled={true}
      onClick={[MockFunction]}
    >
      ADD-DEVICES
    </button>
    <button
      className="button is-primary is-uppercase"
      disabled={true}
      onClick={[MockFunction]}
    >
      20%
    </button>
  </div>
</span>
`;

exports[`DiscoveryStatus page Renders correctly when discovering 1`] = `
<span
  className="has-text-weight-bold mb-20"
>
  DISCOVERY_IN_PROGRESS
</span>
`;

exports[`DiscoveryStatus page Renders correctly when discovery complete and has errors 1`] = `
<Fragment>
  <button
    className="button is-primary is-uppercase is-paddingless is-fullwidth"
    onClick={[MockFunction]}
  >
    RETRY
  </button>
  <span
    className="has-text-weight-bold mt-20"
  >
    BAD_REQUEST_OFFLINE
  </span>
</Fragment>
`;

exports[`DiscoveryStatus page Renders correctly when ended discovering 1`] = `
<div
  className="inline-buttons"
>
  <button
    className="button is-primary is-outlined is-uppercase is-paddingless mb-10"
    disabled={false}
    onClick={[MockFunction]}
  >
    ADD-DEVICES
  </button>
  <button
    className="button is-primary is-uppercase"
    disabled={false}
    onClick={[MockFunction]}
  >
    CLAIM_DEVICES
  </button>
</div>
`;
